--- a/views/pages/admin/addNewItem.ejs
+++ b/views/pages/admin/addNewItem.ejs
@@ -24,7 +24,7 @@
                         </div>
                     </div>
                 </div>
-                <input type="text" class="price" required placeholder="Цена...">
+                
             </div>
             <div class="small-preview">
                 <div onclick="selectedImgPreview(this)">
@@ -42,7 +42,8 @@
                 <div onclick="selectedImgPreview(this)">
                     <img src="/images/items/5.png" alt="">
                 </div>
-            </div>               
+            </div>  
+            <input type="text" class="price" required placeholder="Цена...">             
         </div>
         <div class="descr-item">
             <h3>Название товара</h3>
@@ -72,6 +73,7 @@
                 </div>
             </div>
             <div class="catalog">
+                <h3 class="h3">Каталог 1</h3>
                 <div>
                     <input type="radio" name="catalog-2" id="catalog-1-1" value="catalog-1" onclick="inputSelected(this)">
                     <label for="catalog-1-1">Каталог 1</label>
@@ -87,6 +89,25 @@
                 <div>
                     <input type="radio" name="catalog-2" id="catalog-4-4" value="catalog-4"  onclick="inputSelected(this)">
                     <label for="catalog-4-4">Каталог 4</label>
+                </div>
+            </div>
+            <div class="catalog">
+                <h3 class="h3">Подкаталог 1</h3>
+                <div>
+                    <input type="radio" name="catalog-3" id="catalog-1-1-1" value="catalog-1" onclick="inputSelected(this)">
+                    <label for="catalog-1-1-1">Каталог 1</label>
+                </div>
+                <div>
+                    <input type="radio" name="catalog-3" id="catalog-2-2-2" value="catalog-2"  onclick="inputSelected(this)">
+                    <label for="catalog-2-2-2">Каталог 2</label>
+                </div>
+                <div>
+                    <input type="radio" name="catalog-3" id="catalog-3-3-3" value="catalog-3"  onclick="inputSelected(this)">
+                    <label for="catalog-3-3-3">Каталог 3</label>
+                </div>
+                <div>
+                    <input type="radio" name="catalog-3" id="catalog-4-4-4" value="catalog-4"  onclick="inputSelected(this)">
+                    <label for="catalog-4-4-4">Каталог 4</label>
                 </div>
             </div>
         </div>
