--- a/public/styles/admin.scss
+++ b/public/styles/admin.scss
@@ -88,6 +88,7 @@ body {
     background: white;
     text-align: center;
     font-family: 'Roboto', sans-serif;
+    overflow: hidden;
 }
 
 a {
@@ -1228,6 +1229,7 @@ a {
     opacity: 0;
     pointer-events: none;
     position: absolute;
+    z-index: 5;
     top: 0;
     bottom: 0;
     left: 0;
@@ -1241,10 +1243,11 @@ a {
     }
 
     .scroll-page{
-        width: 100%;
+        width: 100vw;
         max-height: calc(100vh - 128px);
         margin: auto;
         overflow-y: scroll;
+        overflow-x: hidden;
         scrollbar-width: auto;
         scrollbar-color: #999999 #ffffff;
     
@@ -1272,25 +1275,16 @@ a {
                 max-width: 400px;
                 height: 350px;
                 display: flex;
+                flex-wrap: wrap;
+                justify-content: space-between;
                 overflow: hidden;
                 
                 .full-preview{
                     position: relative;
                     width: 300px;
-                    height: 350px;
+                    height: 300px;
                     overflow: hidden;
                     transition: .2s;
-                    
-                    
-
-                    .price{
-                        width: 100%;
-                        height: 50px;
-                        border: 0;
-                        outline: 0;
-                        background: 0;
-                        border-bottom: 1px solid lightgrey;
-                    }
 
                     .img{
                         .add-img-item{
@@ -1438,6 +1432,15 @@ a {
                         }
                     }
                 }
+
+                .price{
+                    width: 100%;
+                    height: 50px;
+                    border: 0;
+                    outline: 0;
+                    background: 0;
+                    border-bottom: 1px solid lightgrey;
+                }
             }
 
             .descr-item{
@@ -1493,6 +1496,7 @@ a {
                 padding-left: 12px;
                 border-left: 1px solid lightgrey;
                 overflow-y: scroll;
+                line-height: 50px;
 
                 &::-webkit-scrollbar{
                     width: 0;
@@ -1501,6 +1505,12 @@ a {
                 &.first{
                     border: 0px;
                     padding-left: 0;
+                }
+
+                h3{
+                    font-size: 24px;
+                    color: grey;
+                    margin-bottom: 12px;
                 }
             }
             
@@ -1556,11 +1566,78 @@ a {
     }
 }
 
-@media screen and (max-width: 600px) {
-    .auth {
-        left: 0;
-        width: 100%;
-        box-shadow: 0 0 0 0;
+@media screen and (max-width: 1200px) {
+    .body{
+        .categories{    
+            .category{
+                min-width: auto;
+                max-width: 250px;
+            }
+        }
+    }
+
+    .add-new-item{
+        .scroll-page{    
+            .flex-menu-desc{
+                width: 100%;
+                padding: 0 12px 0 12px;
+            }
+    
+            .flex-menu-catalog{
+                width: 100%;
+                padding: 12px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 940px) {
+    .add-new-item{    
+        .scroll-page{
+
+            .flex-menu-desc{
+                display: block;
+    
+                .preview{
+                    margin: auto;
+                    
+                }
+    
+                .descr-item{
+                    padding: 12px;
+                    text-align: center;
+    
+                    h3{
+                        text-align: center;
+                    }
+                }
+            }
+
+            h2{
+                text-align: center;
+            }
+    
+            .flex-menu-catalog{
+                width: fit-content;
+                padding: 12px 0 12px 0;
+                margin-left: 0;
+                transition: margin-left .4s;
+
+    
+                .catalog{
+                    width: 100vw;
+                    border: 0;
+                }
+                
+                div{
+                    text-align: center;
+            
+                    label{
+                        font-size: 22px;
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -1616,25 +1693,6 @@ a {
     }
 }
 
-@media screen and (max-width: 460px) {
-    .body{
-        header{
-            text-align: right;
-        }
-    }
-}
-
-@media screen and (max-width: 1200px) {
-    .body{
-        .categories{    
-            .category{
-                min-width: auto;
-                max-width: 250px;
-            }
-        }
-    }
-}
-
 @media screen and (max-width: 700px) {
     .body{
         .categories{
@@ -1648,6 +1706,199 @@ a {
                 .redact{
                     svg{
                         fill: grey;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .auth {
+        left: 0;
+        width: 100%;
+        box-shadow: 0 0 0 0;
+    }
+
+    .edit-account{
+        border-radius: 0;
+        width: 100%;
+        left: 0;
+    
+        form{
+            width: calc(100% - 24px);
+        }
+    }
+
+    .add-admin-menu{
+        left: 0;
+        width: 100%;
+        height: 600px;
+        padding: 12px;
+        border-radius: 0;
+    
+        .inp-block{
+            width: calc(100% - 24px);
+            height: 380px;
+        }
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .add-new-item{    
+        .scroll-page{
+            .flex-menu-desc{
+                display: block;
+    
+                .preview{
+                    margin: auto;
+                    
+                }
+    
+                .descr-item{
+    
+                    h3{
+                        color: grey;
+                        font-size: 22px;
+                    }
+    
+                    input{
+                        width: 100%;
+                        margin: 12px 12px 24px 12px;
+                    }
+    
+                    textarea{
+                        width: 100%;
+                        margin: 12px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 460px) {
+    .body{
+        header{
+            text-align: right;
+        }
+
+        .items{    
+            .item{
+                display: block;
+                height: max-content;
+
+                .img-scroll{
+                    margin: auto;
+                }
+    
+                .about-item{
+                    width: 100%;
+                    padding: 12px 0 12px 0;
+                }
+    
+                .btn-menu{
+                    display: flex;
+                    flex-direction: row;
+                    width: 100%;
+                    height: 50px;
+    
+                    .btn-setting{
+                        display: flex;
+                        justify-content: end;
+                        width: 100%;
+                        height: 50px;
+    
+                        svg{
+                            width: 30px;
+                            height: 30px;
+                            margin: 10px;
+                            cursor: pointer;
+                            fill: grey;
+                            transition: fill .2s;
+    
+                            &:hover{
+                                fill: $primary-orange;
+                            }
+                        }
+                    }
+                }
+            }
+    
+            .btn-add-item{
+                position: absolute;
+                bottom: 0;
+                left: 12px;
+                width: calc(100% - 24px);
+                height: 64px;
+                line-height: 64px;
+                color: $primary-orange;
+                font-size: 20px;
+                border-top: 1px solid lightgrey;
+                cursor: pointer;
+                transition: color .2s;
+    
+                &:hover{
+                    color: grey;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 440px) {
+    .add-new-item{
+        opacity: 0;
+        pointer-events: none;
+        position: absolute;
+        z-index: 5;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: white;
+        transition: .2s;
+    
+        &.active{
+            opacity: 1;
+            pointer-events: all;
+        }
+    
+        .scroll-page{    
+            .flex-menu-desc{    
+                .preview{
+                    min-width: 262px;
+                    max-width: 262px;
+                    height: max-content;
+                    
+                    .full-preview{
+                        width: 200px;
+                        height: 200px;
+    
+                        .img{                        
+                            img{
+                                min-width: 200px;
+                                min-height: 200px;
+                                max-width: 200px;
+                                max-height: 200px;
+                            }
+                        }
+                    }
+    
+                    .small-preview{
+                        width: 62px;
+                        height: 200px;
+                        
+                        div{
+                            min-width: 50px;
+                            min-height: 50px;
+    
+                            img{
+                                width: 50px;
+                                height: 50px;
+                                
+                            }
+                        }
                     }
                 }
             }
